--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "7zip-bin": "^5.2.0",
     "nanoid": "^3.3.4",
     "node-7z": "^3.0.0",
-    "pad-left": "^2.1.0"
+    "pad-left": "^2.1.0",
+    "sharp": "^0.31.2"
   }
 }
