--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nanoid": "^3.3.4",
     "node-7z": "^3.0.0",
     "pad-left": "^2.1.0",
+    "pdf-into-jpg": "^1.0.3",
     "sharp": "^0.31.2"
   }
 }
